# kasma

./: Cargo.toml  LICENSE  README.md
src/: download_engine.rs  main.rs
src/download_engine/: download_worker.rs  http.rs  utils.rs
src/download_engine/http/: http_download_engine.rs  http_download_worker.rs  segment.rs
src/download_engine/http/segment/: byte_range.rs
src/download_engine/utils/: shared_data.rs
src/engine/: mod.rs
src/engine/segment/: byte_range.rs
src/engine/workers/: download_worker.rs  http_downlaod_worker.rs  http_download_worker.rs  mod.rs
